# kampela-firmware

kampela-ui/simulator/: Cargo.toml
kampela-ui/simulator/src/: infernal_wordlist.rs  main.rs
kampela-ui/src/: uistate.rs
